# dispatch-edge

./: .foundation-version  AGENTS.md  BENCHMARKS.md  LICENSE  README.md  capabilities.json  threat-model.md
edge-router/: worker.ts  wrangler.example.toml
sdk/: README.md
sdk/go/: dispatch.go  go.mod
sdk/go/example/: main.go
sdk/js/: README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/wave_dispatch/: __init__.py  cli.py  proxy.py
sdk/ruby/: dispatch.rb  wave_dispatch.gemspec
sdk/ruby/lib/: wave_dispatch.rb
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
