[package]
name = "wave-dispatch"
version = "0.5.1"
edition = "2021"
description = "wave Dispatch — local-first AI router client. Route each request to the cheapest capable model (local-first; escalate to your frontier only when needed). BYO keys + infra."
license = "MIT"
repository = "https://github.com/wave-av/dispatch-edge"
homepage = "https://dispatch.wave.online"
keywords = ["llm", "routing", "local-first", "dispatch"]
categories = ["api-bindings"]

[dependencies]
ureq = "2"
serde_json = "1"
base64 = "0.22"           # 0.5.1 — wallet_hook(privy) needs Basic auth encoding
urlencoding = "2"         # 0.5.1 — wallet_hook(privy) URL-encodes the wallet_id path segment
